Add gravity to player and edit gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Probuilder file
+/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+
